# cmake

PUBLIC_PRIVATE_INTERFACE/demo/: CMakeLists.txt
PUBLIC_PRIVATE_INTERFACE/demo/include/: hello.h
PUBLIC_PRIVATE_INTERFACE/demo/src/: hello.cpp  main.cpp
PUBLIC_PRIVATE_INTERFACE/demo2/: CMakeLists.txt
PUBLIC_PRIVATE_INTERFACE/demo2/include/hello/: hello.h
PUBLIC_PRIVATE_INTERFACE/demo2/include/world/: world.h
PUBLIC_PRIVATE_INTERFACE/demo2/src/: hello.cpp  main.cpp  world.cpp
cmake_study/: CMakeLists.txt
hello_cmake/include/: hello.h
hello_cmake/src/: hello.cpp
hello_cmake2/: CMakeLists.txt
hello_cmake2/dynamic/: libhello.so2
